[gd_scene load_steps=3 format=2]

[ext_resource path="res://World/SaveStation.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 8 )

[node name="SaveStation" type="Area2D"]
script = ExtResource( 1 )

[node name="PlayerDetector" type="RayCast2D" parent="."]
position = Vector2( 0, -8 )
enabled = true
cast_to = Vector2( 0, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -8 )
shape = SubResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_SaveStation_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_SaveStation_mouse_exited"]
